lang/tests/compile_fail/account_allow_removed.stderr
error: behavior arg `unconstrained` requires a value: `unconstrained = ...`. Bare flags are not supported in behavior groups
 --> tests/compile_fail/account_allow_removed.rs:6:21
  |
6 |     #[account(allow(unconstrained))]
  |                     ^^^^^^^^^^^^^
